// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should show label 1`] = `
<DocumentFragment>
  .emotion-8 {
  display: inline-block;
  vertical-align: middle;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clippath: inset(50%);
  clippath: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-4 {
  display: inline-block;
  width: 16px;
  height: 16px;
  background: #ffded5;
  border-radius: 3px;
  -webkit-transition: all 150ms;
  transition: all 150ms;
}

.emotion-1:focus + .emotion-4 {
  box-shadow: 0 0 0 3px pink;
}

.emotion-4 .emotion-3 {
  visibility: hidden;
}

.emotion-2 {
  fill: none;
  stroke: white;
  stroke-width: 2px;
}

.emotion-6 {
  margin-left: 10px;
  vertical-align: top;
}

<label
    class="emotion-8 emotion-9"
    data-testid="container"
  >
    <input
      class="emotion-0 emotion-1"
      data-testid="checkbox"
      type="checkbox"
    />
    <div
      class="emotion-4 emotion-5"
    >
      <svg
        class="emotion-2 emotion-3"
        viewBox="0 0 24 24"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </div>
    <label
      class="emotion-6 emotion-7"
      data-testid="label"
    >
      lorem ipsum
    </label>
  </label>
</DocumentFragment>
`;

exports[`snapshot 1`] = `
<DocumentFragment>
  .emotion-6 {
  display: inline-block;
  vertical-align: middle;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clippath: inset(50%);
  clippath: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-4 {
  display: inline-block;
  width: 16px;
  height: 16px;
  background: #ffded5;
  border-radius: 3px;
  -webkit-transition: all 150ms;
  transition: all 150ms;
}

.emotion-1:focus + .emotion-4 {
  box-shadow: 0 0 0 3px pink;
}

.emotion-4 .emotion-3 {
  visibility: hidden;
}

.emotion-2 {
  fill: none;
  stroke: white;
  stroke-width: 2px;
}

<label
    class="emotion-6 emotion-7"
    data-testid="container"
  >
    <input
      class="emotion-0 emotion-1"
      data-testid="checkbox"
      type="checkbox"
    />
    <div
      class="emotion-4 emotion-5"
    >
      <svg
        class="emotion-2 emotion-3"
        viewBox="0 0 24 24"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </div>
  </label>
</DocumentFragment>
`;
